MDEV-22970 Possible corruption of page_compressed tables, or                when scrubbing is enabled

range_set::find(): Search the value is present in ranges.

buf_read_recv_pages(): Ignore the asynchronous read of page if page
is already freed.

store_freed_or_init_rec(): Store the ranges only if scrubbing variable
is enabled or page compressed tablespace

recv_init_crash_recovery_space(): Add the freed range only when
scrubbing or page compressed tablespace