storage/innobase/buf/buf0rea.cc
@@ -748,6 +748,13 @@ buf_read_recv_pages(
 	const ulint zip_size = space->zip_size();
 
 	for (ulint i = 0; i < n_stored; i++) {
+                /* Ignore if the page already present in
+                freed ranges. */
+                if (!space->freed_ranges.empty()
+                    && space->freed_ranges.find(
+                          static_cast<uint32_t>(page_nos[i])))
+                  continue;
+
 		const page_id_t	cur_page_id(space_id, page_nos[i]);
 
 		ulint limit = 0;
